[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "highd_hsm"
version = "0.1.0"
description = "Roadway structure, flow and HSM crash rate estimation for HighD recordings"
authors = [{name = "TrafficFlowRiskBenchmark"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://example.com/highd_hsm"

[tool.setuptools.packages.find]
where = ["."]
